Added the Rstudio project file to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ R/Field_2023/trainning/renv/activate.R
 R/Field_2023/trainning/renv/settings.json
 R/Field_2023/trainning/Shorter_than_18_bombus.csv
 R/Field_2023/trainning/Simplified_bombus_information_clean.csv
+.Rproj.user
